Rewrite aimassist and fix some bad styling on my part